--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="images/white-mustache.svg" type="image/x-icon" />
     <meta name="description" content="Essa é uma página da barbearia MUSTACHE BARBER" />
     <meta name="keywords" content="barbearia, mustache, barber, cortes, bigode, barba" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
